# sugar-beet-processing-dss

./: .gitignore  .gitmodules  README.md
core/: CMakeLists.txt
core/include/: export.hpp  greedy_strategy.hpp  greedy_thrifty_strategy.hpp  json_schemas.hpp  matrix.hpp  median_strategy.hpp  optimal_strategy.hpp  thrifty_greedy_strategy.hpp  thrifty_strategy.hpp  utils.hpp
core/src/: greedy_strategy.cpp  greedy_thrifty_strategy.cpp  json_schemas.cpp  matrix.cpp  median_strategy.cpp  optimal_strategy.cpp  process_json.cpp  thrifty_greedy_strategy.cpp  thrifty_strategy.cpp  utils.cpp
core/tests/: test_greedy_strategy.cpp  test_greedy_thrifty_strategy.cpp  test_json_parsing.cpp  test_matrix.cpp  test_median_strategy.cpp  test_optimal_strategy.cpp  test_solution_json_generation.cpp  test_thrifty_greedy_strategy.cpp  test_thrifty_strategy.cpp  test_utils.cpp
docs/: cpp_bridge.md  task.md
interface/: cpp_bridge.py  main.py  web_app.py
interface/tests/: cpp_bridge_tests.py
interface/website/: index.html  script.js  style.css
server/: CMakeLists.txt
server/include/: export.hpp  matrix.hpp  process.hpp
server/src/: matrix.cpp  process.cpp
server/tests/: test_matrix.cpp  test_mylib.cpp
